--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth/core": "^0.7.1",
+		"@auth/sveltekit": "^0.3.1"
+	}
 }
