--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.23",
 		"svelte": "^3.54.0",
+		"svelte-typeahead": "^4.4.1",
 		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.0"
 	},
