--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"prisma": "^4.14.0",
 		"sass": "^1.62.1",
 		"svelte": "^3.54.0",
 		"svelte-preprocess": "^5.0.3",
@@ -19,6 +20,8 @@
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.7.1",
-		"@auth/sveltekit": "^0.3.1"
+		"@auth/sveltekit": "^0.3.1",
+		"@next-auth/prisma-adapter": "^1.0.6",
+		"@prisma/client": "4.14.0"
 	}
 }
